<resources>
    <string name="app_name">Instagram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="serach">Serach</string>
    <string name="add">Add</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="instagram">Instagram</string>
    <string name="direct">Direct</string>

</resources>
