<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btm_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/btm_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/serach" />

    <item
        android:id="@+id/btm_nav_add"
        android:icon="@drawable/ic_add_box"
        android:title="@string/add" />
    <item
        android:id="@+id/btm_nav_activity"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/activity" />
    <item
        android:id="@+id/btm_nav_profile"
        android:icon="@drawable/ic_person_border"
        android:title="@string/profile" />
</menu>